--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </button>
                         <div class="text-center">
                             <h2 class="text-xl font-bold text-[var(--color-heading-green)]">Assistente IA</h2>
-                            <p id="active-api-key-indicator" class="text-xs text-gray-500 hidden">Chave 1/5</p>
+                            <p id="active-api-key-indicator" class="text-xs text-gray-500 hidden">Chave configurada</p>
                         </div>
                         <div class="relative">
                              <button class="action-menu-button p-2 rounded-full hover:bg-gray-100" data-id="chat-options">
@@ -595,20 +595,16 @@
     <div id="api-keys-modal" class="modal">
         <div class="modal-content relative">
             <span id="close-api-keys-modal" class="close-button">&times;</span>
-            <h2 class="text-2xl font-bold mb-2">Gerenciar Chaves de API Gemini</h2>
-            <p class="text-gray-500 mb-4">Insira até 5 chaves de API. O sistema alternará entre elas para evitar limites de uso.</p>
+            <h2 class="text-2xl font-bold mb-2">Gerenciar Chave de API Gemini</h2>
+            <p class="text-gray-500 mb-4">Insira sua chave de API do Google AI Studio para habilitar o assistente de IA.</p>
             <div id="api-modal-status-message" class="hidden p-4 mb-4 text-sm rounded-lg" role="alert">
                 <span id="api-modal-message-text"></span>
             </div>
             <div class="space-y-3">
-                 <input type="text" id="modal-api-key-1" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API 1">
-                 <input type="text" id="modal-api-key-2" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API 2">
-                 <input type="text" id="modal-api-key-3" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API 3">
-                 <input type="text" id="modal-api-key-4" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API 4">
-                 <input type="text" id="modal-api-key-5" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API 5">
+                 <input type="text" id="modal-api-key" class="w-full border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-[var(--color-blue-primary)]" placeholder="Chave de API Gemini">
             </div>
             <div class="flex justify-end mt-6">
-                <button id="save-api-keys-modal-button" class="bg-[var(--color-blue-primary)] text-white font-bold py-2 px-4 rounded-lg">Salvar Chaves</button>
+                <button id="save-api-keys-modal-button" class="bg-[var(--color-blue-primary)] text-white font-bold py-2 px-4 rounded-lg">Salvar Chave</button>
             </div>
         </div>
     </div>
